test/corpus/declarations.txt
===
let declaration
===

let x = 42

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer)))

===
let with expression
===

let name = "hello"

---

(source_file
  (let_declaration
    name: (identifier)
    value: (string)))

===
assignment
===

x = 10

---

(source_file
  (assignment
    name: (identifier)
    value: (integer)))

===
let with type annotation
===

let x: number = 42

---

(source_file
  (let_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (integer)))

===
multiple statements
===

let x = 0
x = x + 1

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer))
  (assignment
    name: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (integer))))
