test/corpus/match.txt
===
match with boolean scrutinee
===

match a > b {
  true => a,
  _ => b
}

---

(source_file
  (match_expression
    scrutinee: (binary_expression
      left: (identifier)
      right: (identifier))
    (match_body
      (match_arm
        pattern: (true)
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (identifier)))))

===
match with block body
===

match 10 {
  0 => acc,
  n => {
    acc = acc + n
    continue n - 1
  }
}

---

(source_file
  (match_expression
    scrutinee: (integer)
    (match_body
      (match_arm
        pattern: (integer)
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (block
          (assignment
            name: (identifier)
            value: (binary_expression
              left: (identifier)
              right: (identifier)))
          (continue_expression
            (binary_expression
              left: (identifier)
              right: (integer))))))))

===
match with continue
===

match 10 {
  0 => "done",
  n => continue n - 1
}

---

(source_file
  (match_expression
    scrutinee: (integer)
    (match_body
      (match_arm
        pattern: (integer)
        body: (string))
      (match_arm
        pattern: (identifier)
        body: (continue_expression
          (binary_expression
            left: (identifier)
            right: (integer)))))))

===
nested match
===

match 1 { _ => match 0 { 0 => 100 } }

---

(source_file
  (match_expression
    scrutinee: (integer)
    (match_body
      (match_arm
        pattern: (identifier)
        body: (match_expression
          scrutinee: (integer)
          (match_body
            (match_arm
              pattern: (integer)
              body: (integer))))))))

===
deeply nested match
===

match 1 {
  1 => match 2 {
    2 => match 3 {
      3 => "found",
      _ => "nope"
    },
    _ => "nope"
  },
  _ => "nope"
}

---

(source_file
  (match_expression
    scrutinee: (integer)
    (match_body
      (match_arm
        pattern: (integer)
        body: (match_expression
          scrutinee: (integer)
          (match_body
            (match_arm
              pattern: (integer)
              body: (match_expression
                scrutinee: (integer)
                (match_body
                  (match_arm
                    pattern: (integer)
                    body: (string))
                  (match_arm
                    pattern: (identifier)
                    body: (string)))))
            (match_arm
              pattern: (identifier)
              body: (string)))))
      (match_arm
        pattern: (identifier)
        body: (string)))))

===
match with integer pattern
===

match n % 15 {
  0 => "fizzbuzz",
  _ => n
}

---

(source_file
  (match_expression
    scrutinee: (binary_expression
      left: (identifier)
      right: (integer))
    (match_body
      (match_arm
        pattern: (integer)
        body: (string))
      (match_arm
        pattern: (identifier)
        body: (identifier)))))

===
let binding from match
===

let bigger = match a > b {
  true => a,
  _ => b
}

---

(source_file
  (let_declaration
    name: (identifier)
    value: (match_expression
      scrutinee: (binary_expression
        left: (identifier)
        right: (identifier))
      (match_body
        (match_arm
          pattern: (true)
          body: (identifier))
        (match_arm
          pattern: (identifier)
          body: (identifier))))))

===
match with enum variant pattern
===

match light {
  Color.red => "stop",
  Color.green => "go",
  _ => "unknown"
}

---

(source_file
  (match_expression
    scrutinee: (identifier)
    (match_body
      (match_arm
        pattern: (enum_variant_pattern
          enum: (identifier)
          variant: (identifier))
        body: (string))
      (match_arm
        pattern: (enum_variant_pattern
          enum: (identifier)
          variant: (identifier))
        body: (string))
      (match_arm
        pattern: (identifier)
        body: (string)))))

===
match with enum variant payload
===

match shape {
  Shape.circle(r) => r,
  Shape.rect(dims) => dims,
  _ => nil
}

---

(source_file
  (match_expression
    scrutinee: (identifier)
    (match_body
      (match_arm
        pattern: (enum_variant_pattern
          enum: (identifier)
          variant: (identifier)
          binding: (identifier))
        body: (identifier))
      (match_arm
        pattern: (enum_variant_pattern
          enum: (identifier)
          variant: (identifier)
          binding: (identifier))
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (nil)))))

===
match with direct variant pattern
===

match run(1) {
  Value(v) => v,
  Error(e) => e,
  _ => nil
}

---

(source_file
  (match_expression
    scrutinee: (call_expression
      function: (identifier)
      arguments: (argument_list
        (integer)))
    (match_body
      (match_arm
        pattern: (variant_pattern
          variant: (identifier)
          binding: (identifier))
        body: (identifier))
      (match_arm
        pattern: (variant_pattern
          variant: (identifier)
          binding: (identifier))
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (nil)))))

===
match with string pattern
===

match name {
  "alice" => 1,
  "bob" => 2,
  _ => 0
}

---

(source_file
  (match_expression
    scrutinee: (identifier)
    (match_body
      (match_arm
        pattern: (string)
        body: (integer))
      (match_arm
        pattern: (string)
        body: (integer))
      (match_arm
        pattern: (identifier)
        body: (integer)))))

===
labeled match with labeled continue
===

match :outer y < 3 {
  true => {
    match :inner x < 3 {
      true => {
        x = x + 1
        continue :inner x < 3
      },
      _ => nil
    }
    continue :outer y < 3
  },
  _ => nil
}

---

(source_file
  (match_expression
    label: (label
      (identifier))
    scrutinee: (binary_expression
      left: (identifier)
      right: (integer))
    (match_body
      (match_arm
        pattern: (true)
        body: (block
          (match_expression
            label: (label
              (identifier))
            scrutinee: (binary_expression
              left: (identifier)
              right: (integer))
            (match_body
              (match_arm
                pattern: (true)
                body: (block
                  (assignment
                    name: (identifier)
                    value: (binary_expression
                      left: (identifier)
                      right: (integer)))
                  (continue_expression
                    label: (label
                      (identifier))
                    (binary_expression
                      left: (identifier)
                      right: (integer)))))
              (match_arm
                pattern: (identifier)
                body: (nil))))
          (continue_expression
            label: (label
              (identifier))
            (binary_expression
              left: (identifier)
              right: (integer)))))
      (match_arm
        pattern: (identifier)
        body: (nil)))))
