test/corpus/programs.txt
===
fibonacci
===

let a = 0
let b = 1
match 10 {
  0 => a,
  n => {
    let temp = a + b
    a = b
    b = temp
    continue n - 1
  }
}

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer))
  (let_declaration
    name: (identifier)
    value: (integer))
  (match_expression
    scrutinee: (integer)
    (match_body
      (match_arm
        pattern: (integer)
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (block
          (let_declaration
            name: (identifier)
            value: (binary_expression
              left: (identifier)
              right: (identifier)))
          (assignment
            name: (identifier)
            value: (identifier))
          (assignment
            name: (identifier)
            value: (identifier))
          (continue_expression
            (binary_expression
              left: (identifier)
              right: (integer))))))))

===
closure counter
===

let x = 0
let inc = fn() {
  x = x + 1
  return x
}
inc()
inc()
inc()

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer))
  (let_declaration
    name: (identifier)
    value: (function_definition
      body: (block
        (assignment
          name: (identifier)
          value: (binary_expression
            left: (identifier)
            right: (integer)))
        (return_expression
          (identifier)))))
  (call_expression
    function: (identifier))
  (call_expression
    function: (identifier))
  (call_expression
    function: (identifier)))

===
export table of functions
===

export({
  double: fn(x) { return x * 2 },
  square: fn(x) { return x * x },
  add: fn(a, b) { return a + b },
  answer: 42
})

---

(source_file
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (table_literal
        (table_field
          key: (identifier)
          value: (function_definition
            parameters: (parameter_list
              (parameter
                name: (identifier)))
            body: (block
              (return_expression
                (binary_expression
                  left: (identifier)
                  right: (integer))))))
        (table_field
          key: (identifier)
          value: (function_definition
            parameters: (parameter_list
              (parameter
                name: (identifier)))
            body: (block
              (return_expression
                (binary_expression
                  left: (identifier)
                  right: (identifier))))))
        (table_field
          key: (identifier)
          value: (function_definition
            parameters: (parameter_list
              (parameter
                name: (identifier))
              (parameter
                name: (identifier)))
            body: (block
              (return_expression
                (binary_expression
                  left: (identifier)
                  right: (identifier))))))
        (table_field
          key: (identifier)
          value: (integer))))))

===
print with arguments
===

print("ok", 42, true)

---

(source_file
  (call_expression
    function: (identifier)
    arguments: (argument_list
      (string)
      (integer)
      (true))))

===
gcd via nested match and continue
===

let a = 12
let b = 8
match a == b {
  true => a,
  _ => {
    match a > b {
      true => { a = a - b },
      _ => { b = b - a }
    }
    continue a == b
  }
}

---

(source_file
  (let_declaration
    name: (identifier)
    value: (integer))
  (let_declaration
    name: (identifier)
    value: (integer))
  (match_expression
    scrutinee: (binary_expression
      left: (identifier)
      right: (identifier))
    (match_body
      (match_arm
        pattern: (true)
        body: (identifier))
      (match_arm
        pattern: (identifier)
        body: (block
          (match_expression
            scrutinee: (binary_expression
              left: (identifier)
              right: (identifier))
            (match_body
              (match_arm
                pattern: (true)
                body: (block
                  (assignment
                    name: (identifier)
                    value: (binary_expression
                      left: (identifier)
                      right: (identifier)))))
              (match_arm
                pattern: (identifier)
                body: (block
                  (assignment
                    name: (identifier)
                    value: (binary_expression
                      left: (identifier)
                      right: (identifier)))))))
          (continue_expression
            (binary_expression
              left: (identifier)
              right: (identifier))))))))
