test/corpus/types.txt
===
let with type annotation
===

let x: Number = 5

---

(source_file
  (let_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (integer)))

===
let with string type
===

let name: String = "hello"

---

(source_file
  (let_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))
    value: (string)))

===
let with optional type
===

let y: ?Number = nil

---

(source_file
  (let_declaration
    name: (identifier)
    type: (optional_type
      inner: (type_identifier
        (identifier)))
    value: (nil)))

===
type declaration with struct type
===

type Point = { x: Number, y: Number }

---

(source_file
  (type_declaration
    name: (identifier)
    type: (struct_type
      (type_field
        name: (identifier)
        type: (type_identifier
          (identifier)))
      (type_field
        name: (identifier)
        type: (type_identifier
          (identifier))))))

===
type declaration with function type
===

type Handler = function(String)! -> Number

---

(source_file
  (type_declaration
    name: (identifier)
    type: (function_type
      (type_identifier
        (identifier))
      return_type: (type_identifier
        (identifier)))))

===
type declaration with simple type
===

type Name = String

---

(source_file
  (type_declaration
    name: (identifier)
    type: (type_identifier
      (identifier))))

===
function type with no params
===

type Callback = function() -> Boolean

---

(source_file
  (type_declaration
    name: (identifier)
    type: (function_type
      return_type: (type_identifier
        (identifier)))))

===
function type with multiple params
===

type BinOp = function(Number, Number) -> Number

---

(source_file
  (type_declaration
    name: (identifier)
    type: (function_type
      (type_identifier
        (identifier))
      (type_identifier
        (identifier))
      return_type: (type_identifier
        (identifier)))))

===
nested optional type
===

let x: ??Number = nil

---

(source_file
  (let_declaration
    name: (identifier)
    type: (optional_type
      inner: (optional_type
        inner: (type_identifier
          (identifier))))
    value: (nil)))
